--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,14 @@ main {
     -webkit-appearance: none;
 }
 
+.beerWrapper {
+    margin: 0px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 #beerInfo {
     padding: 20px;
     width: 350px;
@@ -86,6 +94,14 @@ main {
     font-size: 1rem;
     font-weight: 300;
     letter-spacing: .08rem;
+}
+
+#beerInfo > p.tagline {
+    margin-bottom: 20px;
+}
+
+#beerInfo > p.description {
+    font-size: .7rem;
 }
 
 #beerInfo > i {
@@ -106,6 +122,11 @@ main {
     background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+}
+
+#beerInfo img {
+    margin: 10px;
+    width: 50px;
 }
 
 @-webkit-keyframes tracking-in-expand {
@@ -132,11 +153,11 @@ main {
         flex-direction: row;
     }
 
-    #searchCityLabel {
+    #searchBeerLabel {
         margin: 0 0;
     }
 
-    #searchCity {
+    #searchBeer {
         margin: 10px 0;
     }
 }
