--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,41 @@ html {
 
 body {
     margin: 0;
+    width: 100%;
     height: 100%;
     font-family: 'Helvetica';
     text-align: center;
     background-color: #f2f2f2;
 }
 
+input {
+    margin-right: 10px;
+}
+
 header {
     margin: 0;
-    padding: 20px 40px;
+    width: 100%;
     background-color: #fff;
     border-bottom: 1px solid #d2d2d2;
+    opacity: .80;
+    position: fixed;
+    z-index: 1;
+}
+
+.navigation {
+    padding: 20px 40px;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
+
 .inputWrapper {
+    width: 300px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 h1 {
@@ -41,16 +57,21 @@ h1 {
 
 h2 {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1rem;
+}
+
+h3{
+    margin: 5px 0;
+    font-weight: 300;
 }
 
 main {
-    padding: 40px;
+    padding: 60px 40px 40px 40px;
     display: flex;
     justify-content: center;
 }
 
-#searchBeerLabel {
+label {
     margin: 10px 0;
     font-family: 'Helvetica';
     font-size: .7rem;
@@ -58,30 +79,17 @@ main {
     color: #000;
 }
 
-#searchBeer {
-    padding: 0 10px;
-    width: 220px;
-    height: 30px;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 300;
-    letter-spacing: .05rem;
-    background-color: #fff;
-    border: 1px solid #d2d2d2;
-    border-radius: 15px;
-    -webkit-appearance: none;
-}
-
-.beerWrapper {
-    margin: 0px 40px;
+#beerWrapper {
+    margin-top: 50px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
 
-#beerInfo {
+.beerInfo {
+    margin: 10px;
     padding: 20px;
-    width: 350px;
+    width: 300px;
     background-color: #fff;
     border-radius: 15px;
     -webkit-box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.2);
@@ -89,22 +97,22 @@ main {
     box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.2);
 }
 
-#beerInfo > p {
+.beerInfo > p {
     margin: 8px;
     font-size: 1rem;
     font-weight: 300;
     letter-spacing: .08rem;
 }
 
-#beerInfo > p.tagline {
+.beerInfo > p.tagline {
     margin-bottom: 20px;
 }
 
-#beerInfo > p.description {
+.beerInfo > p.description {
     font-size: .7rem;
 }
 
-#beerInfo > i {
+.beerInfo > i {
     font-size: 8rem;
     background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
     -webkit-text-fill-color: transparent;
@@ -112,21 +120,21 @@ main {
     transition: 400ms;
 }
 
-#beerInfo > i:hover {
+.beerInfo > i:hover {
     font-size: 10rem;
     transition: 400ms;
 }
 
-#beerInfo > p > i {
+.beerInfo > p > i {
     font-size: 1rem;
     background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
 
-#beerInfo img {
+.beerInfo img {
     margin: 10px;
-    width: 50px;
+    height: 150px;
 }
 
 @-webkit-keyframes tracking-in-expand {
@@ -146,14 +154,14 @@ main {
     100% { opacity: 1; }
   }
 
-@media screen and (min-width: 570px) {
-    header{
+  @media screen and (min-width: 570px) {
+    .navigation {
         display: flex;
         justify-content: space-between;
         flex-direction: row;
     }
 
-    #searchBeerLabel {
+    #searchBeer {
         margin: 0 0;
     }
 
