--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -6,7 +6,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    font-family: 'Helvetica';
+    font-family: 'Roboto Mono', monospace;
     text-align: center;
     background-color: #f6f6f6;
 }
@@ -17,8 +17,8 @@ header {
     background-color: #fff;
     border-bottom: 1px solid #dedede;
     opacity: .80;
-    position: fixed;
-    z-index: 1;
+    // position: fixed;
+    // z-index: 1;
 }
 
 .navigation {
@@ -27,7 +27,7 @@ header {
     align-items: center;
     flex-direction: column;
     h1 {
-        margin: 0 0 20px 0;
+        margin: 0;
         font-family: 'Roboto Mono', monospace;
         font-size: .8rem;
         font-weight: 900;
@@ -42,6 +42,8 @@ header {
     img {
         margin-bottom: 10px;
         height: 50px;
+        -webkit-animation: bounce-in-top 1.1s ;
+	        animation: bounce-in-top 1.1s ;
     }
 }
 
@@ -54,12 +56,12 @@ header {
     flex-wrap: wrap;
     button {
         margin: 5px;
-        padding: 5px 10px;
-        width: 120px;
-        height: 40px;
+        padding: 5px;
+        width: 110px;
+        height: 35px;
+        font-family: 'Roboto Mono', monospace;
         font-weight: 900;
-        letter-spacing: 0.05rem;
-        background-color: #fff;
+        background-color: transparent;
         border: 2px solid #13547a;
         border-radius: 25px;
         transition: ease 400ms;
@@ -71,13 +73,19 @@ header {
 }
 
 main {
-    padding: 60px 40px 40px 40px;
+    padding: 30px 20px 20px 20px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    p {
+        margin: 0 0 10px 0;
+        font-size: .6rem;
+        letter-spacing: .05rem;
+    }
 }
 
 #beerWrapper {
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -94,14 +102,16 @@ main {
     box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.2);
     -webkit-animation: fade-in 800ms cubic-bezier(0.390, 0.575, 0.565, 1.000) ;
     animation: fade-in 800ms cubic-bezier(0.390, 0.575, 0.565, 1.000) ;
-    p {
-        margin: 8px;
+    h2 {
+        margin: 0;
         font-size: 1rem;
-        font-weight: 300;
-        letter-spacing: .08rem;
     }
     p.tagline {
-        margin-bottom: 20px;
+        margin: 5px;
+        font-size: .7rem;
+        font-weight: 300;
+        font-style: italic;
+        letter-spacing: .08rem;
     }
     p.description {
         font-size: .7rem;
