--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -33,7 +33,7 @@ header {
         font-weight: 900;
         text-transform: uppercase;
         letter-spacing: .02rem;
-        background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+        background-image: linear-gradient(15deg, #13547a 0%, #00afdb 100%);
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
         -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
@@ -62,12 +62,13 @@ header {
         font-family: 'Roboto Mono', monospace;
         font-weight: 900;
         background-color: transparent;
-        border: 2px solid #13547a;
+        border: 2px solid #00afdb;
         border-radius: 25px;
         transition: ease 400ms;
     }
     button:hover {
-        background-color: #13547a;
+        color: #fff;
+        background-color: #00afdb;
         cursor: pointer;
     }
 }
