--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "_mobile.scss";
 @import "_keyframes.scss";
 
-@media screen and (min-width: 700px) {
-    @import "_desktop.scss";
+
+@media screen and (min-width: 740px) {
+    @import "_tablet.scss";
 }
