--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,7 @@
 @media screen and (min-width: 740px) {
     @import "_tablet.scss";
 }
+
+@media screen and (min-width: 1024px) {
+    @import "_desktop.scss";
+}
