--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -17,7 +17,6 @@ header {
     width: 100%;
     background-color: #fff;
     border-bottom: 1px solid #dedede;
-    opacity: .80;
 }
 
 .navigation {
@@ -25,6 +24,7 @@ header {
     display: flex;
     align-items: center;
     flex-direction: column;
+    opacity: .80;
     h1 {
         margin: 0;
         font-family: 'Roboto Mono', monospace;
@@ -72,11 +72,24 @@ main {
     padding: 30px 20px 20px 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     p {
         margin: 0 0 10px 0;
         font-size: .7rem;
         letter-spacing: .05rem;
+    }
+    label {
+        margin-top: 20px;
+        font-size: .7rem;
+    }
+    input {
+        margin-top: 10px;
+        padding: 0 10px;
+        width: 300px;
+        height: 25px;
+        border: 0;
+        border-radius: 25px;
     }
 }
 
@@ -87,11 +100,12 @@ main {
     flex-wrap: wrap;
 }
 
+
 #loading {
-    margin-top: 50px;
+    margin: 50px 0 10px 0;
     height: 100px;
     -webkit-animation: rotate-center 1s linear infinite both;
-	        animation: rotate-center 1s linear infinite both;
+            animation: rotate-center 1s linear infinite both;
 }
 
 .beerInfo {
@@ -108,6 +122,12 @@ main {
     h2 {
         margin: 0;
         font-size: 1rem;
+    }
+    h3 {
+        margin: 20px 0 10px 0;
+        padding-bottom: 10px;
+        font-size: 1rem;
+        border-bottom: 1px solid #f2f2f2;
     }
     p.tagline {
         margin: 5px;
