Added a small footer and changed food pairings to ul > li, also fixed the food pairing search so it works (better)

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -8,6 +8,7 @@ body {
     min-width: 320px;
     height: 100%;
     font-family: 'Roboto Mono', monospace;
+    font-size: .7rem;
     text-align: center;
     background-color: #f2f2f2;
 }
@@ -27,7 +28,6 @@ header {
     opacity: .80;
     h1 {
         margin: 0;
-        font-family: 'Roboto Mono', monospace;
         font-size: .8rem;
         font-weight: 700;
         text-transform: uppercase;
@@ -76,18 +76,19 @@ main {
     flex-direction: column;
     p {
         margin: 0 0 10px 0;
-        font-size: .7rem;
         letter-spacing: .05rem;
     }
     label {
         margin-top: 20px;
-        font-size: .7rem;
     }
     input {
         margin-top: 10px;
         padding: 0 10px;
-        width: 300px;
+        width: 100%;
+        max-width: 300px;
         height: 25px;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 1rem;
         border: 0;
         border-radius: 25px;
     }
@@ -100,12 +101,14 @@ main {
     flex-wrap: wrap;
 }
 
-
-#loading {
-    margin: 50px 0 10px 0;
-    height: 100px;
-    -webkit-animation: rotate-center 1s linear infinite both;
-            animation: rotate-center 1s linear infinite both;
+.loadingWrapper {
+    margin: 50px 0;
+    #loading {
+        margin: 0px 0 10px 0;
+        height: 100px;
+        -webkit-animation: rotate-center 1s linear infinite both;
+                animation: rotate-center 1s linear infinite both;
+    }
 }
 
 .beerInfo {
@@ -132,7 +135,6 @@ main {
     p.tagline {
         margin: 5px;
         padding-bottom: 10px;
-        font-size: .7rem;
         font-weight: 300;
         font-style: italic;
         letter-spacing: .08rem;
@@ -140,7 +142,6 @@ main {
     }
     p.description {
         margin-top: 10px;
-        font-size: .7rem;
         line-height: 1rem;
     }
     img {
@@ -148,5 +149,30 @@ main {
         height: 150px;
         -webkit-filter: grayscale(50%);
         filter: grayscale(50%);
+    }
+    ul {
+        padding: 0;
+        list-style: none;
+        li {
+            margin: 5px;
+        }
+    }
+}
+
+footer {
+    margin: 20px 0 50px;
+    font-size: .5rem;
+    color: #000;
+    letter-spacing: .05rem;
+    text-align: center;
+    img {
+        height: 80px;
+    }
+    h4 {
+        margin: 10px 0 0 0;
+        font-size: .7rem;
+    }
+    p {
+        font-weight: 300;
     }
 }
