--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,35 +1,31 @@
-html {
-    height: 100%;
-}
-
 body {
     margin: 0;
     width: 100%;
     min-width: 320px;
-    height: 100%;
     font-family: 'Roboto Mono', monospace;
     font-size: .7rem;
     text-align: center;
     background-color: #f2f2f2;
 }
 
-header {
+.navigation {
     margin: 0;
-    width: 100%;
+    padding: 20px 40px;
     background-color: #fff;
     border-bottom: 1px solid #dedede;
-}
-
-.navigation {
-    padding: 20px 40px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
     opacity: .80;
+    a {
+        text-decoration: none;
+    }
+    img {
+        margin-bottom: 10px;
+        height: 50px;
+        -webkit-animation: bounce-in-top 1.1s ;
+	        animation: bounce-in-top 1.1s ;
+    }
     h1 {
         margin: 0;
         font-size: .8rem;
-        font-weight: 700;
         text-transform: uppercase;
         letter-spacing: .02rem;
         background-image: linear-gradient(15deg, #13547a 0%, #00afdb 100%);
@@ -38,19 +34,12 @@ header {
         -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
                 animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     }
-    img {
-        margin-bottom: 10px;
-        height: 50px;
-        -webkit-animation: bounce-in-top 1.1s ;
-	        animation: bounce-in-top 1.1s ;
-    }
 }
 
 
 .buttonWrapper {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     button {
