--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -79,7 +79,10 @@ main {
         font-family: 'Roboto Mono', monospace;
         font-size: 1rem;
         border: 0;
-        border-radius: 25px;
+        border-radius: 25px;   
+    }
+    input:focus {
+        outline: 0;
     }
 }
 
