Changed button styling

--- a/sass/_desktop.scss
+++ b/sass/_desktop.scss
@@ -2,6 +2,7 @@
     button:hover {
         color: #fff;
         background-color: #00afdb;
+        border: 1px solid #00afdb;
         cursor: pointer;
     }
 }
