--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -36,7 +36,6 @@ body {
     }
 }
 
-
 .buttonWrapper {
     display: flex;
     flex-direction: row;
@@ -47,13 +46,17 @@ body {
         padding: 5px;
         width: 110px;
         height: 35px;
-        font-family: 'Roboto Mono', monospace;
-        font-weight: 700;
+        font-weight: 400;
         letter-spacing: .02rem;
+        color: #0088aa;
         background-color: transparent;
-        border: 2px solid #00afdb;
+        border: 1px solid #0088aa;
         border-radius: 25px;
         transition: ease 400ms;
+    }
+    button#showAll {
+        @extend button;
+        font-family: 'Roboto Mono', monospace;
     }
 }
 
@@ -111,7 +114,7 @@ main {
     border-radius: 15px;
     -webkit-box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.2);
-    box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.2);
     -webkit-animation: fade-in 800ms cubic-bezier(0.390, 0.575, 0.565, 1.000) ;
     animation: fade-in 800ms cubic-bezier(0.390, 0.575, 0.565, 1.000) ;
     h2 {
