--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -46,17 +46,14 @@ body {
         padding: 5px;
         width: 110px;
         height: 35px;
+        font-family: 'Roboto', sans-serif;
         font-weight: 400;
-        letter-spacing: .02rem;
+        letter-spacing: .05rem;
         color: #0088aa;
         background-color: transparent;
         border: 1px solid #0088aa;
         border-radius: 25px;
         transition: ease 400ms;
-    }
-    button#showAll {
-        @extend button;
-        font-family: 'Roboto Mono', monospace;
     }
 }
 
@@ -79,8 +76,9 @@ main {
         width: 100%;
         max-width: 300px;
         height: 30px;
-        font-family: 'Roboto Mono', monospace;
+        font-family: 'Roboto mono', monospace;
         font-size: 1rem;
+        font-weight: 300;
         border: 0;
         border-radius: 25px;   
     }
@@ -169,6 +167,7 @@ main {
 
 footer {
     margin: 20px 0 50px;
+    padding: 0 30px;
     font-size: .5rem;
     color: #000;
     letter-spacing: .05rem;
