--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -135,6 +135,7 @@ main {
     }
     p.description {
         margin-top: 10px;
+        font-family: 'Roboto', sans-serif;
         line-height: 1rem;
     }
     img {
@@ -145,9 +146,11 @@ main {
     }
     ul {
         padding: 0;
+        font-family: 'Roboto', sans-serif;
         list-style: none;
         li {
             margin: 5px;
+            letter-spacing: .05rem;
         }
     }
 }
